--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
-    "@react-native-community/cli": "^4.10.1",
+    "@react-native-community/cli": "^4.14.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.4",
     "@react-navigation/drawer": "^5.8.4",
@@ -33,11 +33,12 @@
     "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "react": "16.13.0",
-    "react-native": "0.63.0",
+    "react-native": "^0.64.2",
     "react-native-animatable": "^1.3.3",
     "react-native-audio-record": "^0.2.2",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
-    "react-native-code-push": "^6.2.1",
+    "react-native-code-push": "^6.4.1",
+    "react-native-eject": "^0.1.2",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^4.0.4",
@@ -45,6 +46,7 @@
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-modal": "^11.5.6",
     "react-native-paper": "^3.10.1",
+    "react-native-permissions": "^3.0.5",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
